# rpi-pirate-audio

./: .gitignore  Makefile  README.md  ecosystem.config.js  pyproject.toml  requirements.txt
notes/: audio-gpio25-troubleshooting.md  bluetooth-a2dp-sink-setup.md  display-setup.md  uv-setup.md
scripts/: buttons.py  rainbow.py  setup-bluetooth-a2dp-sink.sh
src/app/: app.py
src/apps/: utils.py
src/apps/buttons_listener/: main.py  settings.py
src/apps/status_display/: main.py  settings.py  utils.py
src/scripts/: buttons.py  rainbow.py
