[project]
name = "rpi-pirate-audio"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["**/__pycache__", ".venv"]
python-version = "3.13"
python-platform = "linux"
python-interpreter-path = ".venv/bin/python"
search-path = ["src/app", "src/scripts"]

[dependency-groups]
dev = [
    "pyrefly>=0.64.1",
    "ruff>=0.15.12",
    "types-rpi-gpio>=0.7.0.20260508",
]
